RESOLVED FIXED230828
Boundary check of AccessibilityMathMLElement::mathOverObject is incorrect
https://bugs.webkit.org/show_bug.cgi?id=230828
Summary Boundary check of AccessibilityMathMLElement::mathOverObject is incorrect
Frédéric Wang Nélar
Reported 2021-09-27 06:49:07 PDT
For an munderover tag, we try to access children[2] but only check whether there are at least 2 children.
Attachments
Patch (1.70 KB, patch)
2021-09-27 08:21 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2021-09-27 06:49:19 PDT
Andres Gonzalez
Comment 2 2021-09-27 08:21:41 PDT
EWS
Comment 3 2021-09-27 10:59:54 PDT
Committed r283127 (242185@main): <https://commits.webkit.org/242185@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439355 [details].
Note You need to log in before you can comment on or make changes to this bug.