Boundary check of AccessibilityMathMLElement::mathOverObject is incorrect https://bugs.webkit.org/show_bug.cgi?id=230828 <rdar://problem/83571752>

Reviewed by Chris Fleizach.

* accessibility/AccessibilityMathMLElement.cpp:
(WebCore::AccessibilityMathMLElement::mathOverObject):


Canonical link: https://commits.webkit.org/242185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283127 268f45cc-cd09-0410-ab3c-d52691b4dbfc